js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenFiles/js-module-b-new.mjs
export function externalDemoFunction() { return 2; }